@startuml ViwesUML
package Views {
    package Map {
        class "MapScreen" {
            {static} +String route
            +void initState()
            +Widget build()
        }
        "MapScreen" --> "MapViewModel"
        "MapScreen" --> "ChatViewModel"
        "ExpertProfileScreen" --> "AppRouterDelegate"

        class "MapBody" {
            -Set<Marker> _markers
            -CustomInfoWindowController _customInfoWindowController
            -String _mapStyle
            +GoogleMapController mapController
            +PermissionStatus? positionPermission
            +bool isPositionSearched
            -dynamic _loadCurrentPositionFuture
            +void initState()
            +Widget build()
            +void handlePositionPermission()
            +void getMarkers()
            +StreamSubscription<Place?> subscribeToSelectedPlace()
            -Future<void> _goToPlace()
            +Widget buildMap()
            +Widget buildSearchBar()
            +void dispose()
        }
        "MapBody" --* "MapScreen"
        "MapBody" --> "google_maps_flutter::GoogleMapController"

        class "MapInfoWindow" {
            +Expert expert
            +CustomInfoWindowController infoWindowController
            +Widget build()
        }
        "MapInfoWindow" --* "MapBody"
        "MapInfoWindow" --> "Expert"
    }
}
@enduml